# PathGuard-Next

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  WORKSPACE.md  artifacts-phase2-policy-after.csv  artifacts-phase2-policy-baseline.csv
cli/: CMakeLists.txt
cli/src/: main.cpp
core/: CMakeLists.txt
core/src/: binary.cpp  path.cpp  policy.cpp  topology.cpp  validation.cpp  version.cpp
daemon/: CMakeLists.txt
daemon/src/: main.cpp
docs/: 00-architecture-design.md  01-reference-projects.md  02-performance-audit-and-optimization-plan.md  03-redirect-subsystem-design.md  download_reference_repos.sh
docs/adr/: 0001-zygote-inherited-policy-mmap.md  0002-policy-format-v4.md  0003-mount-timeout-and-mutation-lease.md  0004-capability-bitset.md  0005-dual-mount-backends.md  0006-saf-provider-virtualization.md
module/: action.sh  boot-completed.sh  customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
module/config/: rules.ini
module/zygisk/: README.md
native/: Android.mk  Application.mk  directory_resolver.cpp  mount_executor.cpp
protocol/schema/: control-protocol.md
scripts/: build-native.ps1  build.ps1  package.ps1
tests/: CMakeLists.txt  hot_reload_test.ps1
tests/device/: package_transaction_test.ps1  r1-alioth-capability-report.md
tests/perf/: policy_benchmark.cpp
tests/unit/: binary_test.cpp  core_smoke_test.cpp  mount_backend_test.cpp  mount_transaction_test.cpp  path_test.cpp  policy_test.cpp  provider_path_mapper_test.cpp  test_assert.h  topology_test.cpp  validation_test.cpp
zygisk/src/: media_query_hook.cpp  module_entry.cpp  provider_path_mapper.cpp  (+1 more)
(+17 files in other folders)
